Added color to odd tasks to prevent from transparency

--- a/TaskManager.html
+++ b/TaskManager.html
@@ -69,6 +69,10 @@
         background-color: #f3f3f3;
        }
 
+        .content-table tbody tr:nth-of-type(odd) {
+        background-color: #ffffff;
+       }
+
        .center-heading {
             text-align: center;
             margin: 30px;
