--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 
 
-<iframe id="InfleucnerContainer" src = "https://msocialverse.com/mojoonpc"></iframe>
+<iframe id="InfleucnerContainer"></iframe>
 
 <script>
   const queryString = window.location.search;
