--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 
-
-<iframe id="InfleucnerContainer"></iframe>
+<div>Welcome to sanga games</div>
+<iframe id="InfleucnerContainer" style="width:1000px;height:300px;"></iframe>
 
 <script>
   const queryString = window.location.search;
