--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
   const queryString = window.location.search;
   const urlParams = new URLSearchParams(queryString);
   const influencer = urlParams.get('influencer')
-  const IFrame = document.getElementByID("InfleucnerContainer");
+  const IFrame = document.getElementById("InfleucnerContainer");
   IFrame.src = "https://msocialverse.com/" + influencer;
 </script>
