--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 
 <div>Welcome to sanga games</div>
-<iframe id="InfleucnerContainer" style="width:1000px;height:300px;"></iframe>
+<iframe id="InfleucnerContainer" style="width:1500px;height:700px; border:none"></iframe>
 
 <script>
   const queryString = window.location.search;
