--- a/test.html
+++ b/test.html
@@ -8,4 +8,9 @@
   const influencer = urlParams.get('influencer')
   const IFrame = document.getElementById("InfleucnerContainer");
   IFrame.src = "https://msocialverse.com/" + influencer;
+
+  window.addEventListener('message',function(e){
+    // the logic to collect affliation data and show sign up
+    alert(e.data);
+  });
 </script>
