--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
   const urlParams = new URLSearchParams(queryString);
   const influencer = urlParams.get('influencer')
   const IFrame = document.getElementById("InfleucnerContainer");
-  IFrame.src = "https://msocialverse.com/" + influencer;
+  IFrame.src = "https://msocialverse.com/exeedme/" + influencer;
 
   window.addEventListener('message',function(e){
     // the logic to collect affliation data and show sign up
