--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
 
   window.addEventListener('message',function(e){
     // the logic to collect affliation data and show sign up
+    if(e.origin !== "https://msocialverse.com/exeedme/mojoonpc/") return;
     alert(e.data);
   });
 </script>
